fix: popup overflow, anchor swap to http

--- a/src/Components/css/navbar.css
+++ b/src/Components/css/navbar.css
@@ -1,6 +1,3 @@
-:root {
-    --plum: #AB81CD;
-}
 
 .navbar-content {
     display: flex;
